<resources>
  <string name="app_name">YaWeather</string>
  <string name="appwidget_text">Current city</string>
  <string name="add_widget">Add widget</string>
  <string name="app_widget_description">This is an app widget description</string>
  <string name="appwidget_temperature">Temperature</string>
  <string name="app_widget_sunrise">Sunrise</string>
  <string name="app_widget_sunset">Sunset</string>
  <string name="info_screen_image">Картинка на Инфо скрине</string>
  <string name="splash_screen_rotation">rotation</string>
  <string name="splash_screen_sun_icon">Sun Icon</string>
  <string name="splash_screen_scale">scale</string>
  <string name="splash_screen_offset">offset</string>
  <string name="splash_screen_cloud_icon">Cloud Icon</string>
  <string name="back_button">Back button</string>
  <string name="weather_screen_settings_icon">Settings</string>
  <string name="weather_screen_info_icon">Info</string>
  <string name="weather_screen_add_icon">Add</string>
  <string name="weather_screen_background_image">Background Image</string>
  <string name="settings_bottom_sheet">Settings</string>
  <string name="settings_bottom_sheet_temperature">Temperature</string>
  <string name="settings_bottom_sheet_fahrenheit">Fahrenheit</string>
  <string name="settings_bottom_sheet_selcuim">Celsius</string>
  <string name="settings_bottom_sheet_wind">Wind</string>
  <string name="settings_bottom_sheet_wind_speed1">km/h</string>
  <string name="settings_bottom_sheet_wind_speed2">m/s</string>
  <string name="settings_bottom_sheet_pressure">Pressure</string>
  <string name="settings_bottom_sheet_pressure1">hPa</string>
  <string name="settings_bottom_sheet_pressure2">mmHg</string>
  <string name="settings_Bottom_sheet_precipitation">Precipitation</string>
  <string name="settings_bottom_sheet_precipitaion1">Inches</string>
  <string name="settings_bottom_sheet_precipitaion2">Millimeters</string>
  <string name="settings_bottom_sheet_morning_notification">Morning report</string>
  <string name="settings_bottom_sheet_every_day_notification">Weather information every day</string>
  <string name="settings_bottom_sheet_hour">Time</string>
  <string name="settings_bottom_sheet_choose_time">Select notification time</string>
  <string name="settings_bottom_sheet_night_report">Evening report</string>
  <string name="settings_bottom_sheet_for_day_notification">Get a day\'s notice</string>
  <string name="settings_bottom_sheet_change_theme">Change theme</string>
  <string name="settings_bottom_sheet_language">Choose language</string>
  <string name="uz">UZ</string>
  <string name="ru">RU</string>
  <string name="en">EN</string>
  <string name="info_screen_about">Inforation about application</string>
  <string name="info_jetpack">- Jetpack Navigation Component</string>
  <string name="info_dagger2">- Dagger 2</string>
  <string name="info_room">- Room</string>
  <string name="info_compose">- Compose</string>
  <string name="info_retrofit">- Retrofit</string>
  <string name="info_coroutines">- Coroutines</string>
  <string name="info_map">- Google Map</string>
  <string name="info_work_manager">- WorkManager</string>
  <string name="info_used_resources">Used resources</string>
  <string name="info_uri">- https://openweathermap.org</string>
  <string name="info_contact_us">Contact us</string>
  <string name="info_thanks">Thank you for attention!</string>
  <string name="humidity">Humidity</string>
  <string name="feelsLike">Feels like</string>
  <string name="sunrise">sunrise</string>
  <string name="sunset">sunset</string>
  <string name="max">Max.</string>
  <string name="min">Min.</string>
  <string name="hourly_forecast">HOURLY FORECAST</string>
  <string name="fivedayforecast">5-DAY FORECAST</string>
  <string name="showmore">Show more</string>
  <string name="hide">Hide</string>
  <string name="menu">Menu</string>
  <string name="share">Share</string>
  <string name="settings">Settings</string>

  <string name="thunderstorm_light_rain">Thunderstorm with light rain</string>
  <string name="thunderstorm_rain">Thunderstorm with rain</string>
  <string name="thunderstorm_heavy_rain">Thunderstorm with heavy rain</string>
  <string name="light_thunderstorm">Light thunderstorm</string>
  <string name="thunderstorm">Thunderstorm</string>
  <string name="heavy_thunderstorm">Heavy thunderstorm</string>
  <string name="ragged_thunderstorm">Ragged thunderstorm</string>
  <string name="thunderstorm_light_dizzle">Thunderstorm with light drizzle</string>
  <string name="thunderstorm_dizzle">Thunderstorm with drizzle</string>
  <string name="thunderstorm_heavy_dizzle">Thunderstorm with heavy drizzle</string>

  <string name="light_intensity_dizzle">Light intensity drizzle</string>
  <string name="dizzle">Drizzle</string>
  <string name="heavy_intensity_dizzle">Heavy intensity drizzle</string>
  <string name="light_intensity_dizzle_rain">Light intensity drizzle rain</string>
  <string name="dizzle_rain">Drizzle rain</string>
  <string name="heavy_intensity_dizzle_rain">Heavy intensity drizzle rain</string>
  <string name="shower_rain_and_dizzle">Shower rain and drizzle</string>
  <string name="heavy_shower_rain_and_dizzle">Heavy shower rain and drizzle</string>
  <string name="shower_dizzle">Shower drizzle</string>

  <string name="light_rain">Light rain</string>
  <string name="moderate_rain">Moderate rain</string>
  <string name="heavy_intensity_rain">Heavy intensity rain</string>
  <string name="very_heavy_rain">Very heavy rain</string>
  <string name="extreme_rain">Extreme rain</string>
  <string name="freezing_rain">Freezing rain</string>
  <string name="light_intensity_shower_rain">Light intensity shower rain</string>
  <string name="shower_rain">Shower rain</string>
  <string name="heavy_intensity_shower_rain">Heavy intensity shower rain</string>
  <string name="ragged_shower_rain">Ragged shower rain</string>

  <string name="light_snow">Light snow</string>
  <string name="snow">Snow</string>
  <string name="heavy_snow">Heavy snow</string>
  <string name="sleet">Sleet</string>
  <string name="light_shower_sleet">Light shower sleet</string>
  <string name="shower_sleet">Shower sleet</string>
  <string name="light_rain_and_snow">Light rain and snow</string>
  <string name="rain_and_snow">Rain and snow</string>
  <string name="light_shower_snow">Light shower snow</string>
  <string name="shower_snow">Shower snow</string>
  <string name="heavy_shower_snow">Heavy shower snow</string>

  <string name="mist">Mist</string>
  <string name="smoke">Smoke</string>
  <string name="haze">Haze</string>
  <string name="dust">Dust</string>
  <string name="fog">Fog</string>
  <string name="sand">Sand</string>
  <string name="dust_p">Dust</string>
  <string name="ash">Volcanic ash</string>
  <string name="squall">Squall</string>
  <string name="tornado">Tornado</string>

  <string name="clear_sky">Clear sky</string>

  <string name="few_clouds">Few clouds</string>
  <string name="scattered_clouds">Scattered clouds</string>
  <string name="broken_clouds">Broken clouds</string>
  <string name="overcast_clouds">Overcast clouds</string>

  <string name="unknown">I don\'t even know what to say</string>
  <string name="search_result_for">Search result for</string>
  <string name="search_cities">Search cities</string>
  <string name="recent_searches">Recent searches</string>

  <string name="perfect_time_for_walk">Perfect time for a walk</string>
    <string name="clouds_message">Dress warmly</string>
    <string name="snow_message">Perfect time for hot coffee</string>
    <string name="rain_message">Perfect time for reading a book</string>
    <string name="clear_message">Perfect time for a walk</string>
    <string name="drizzle_message">Perfect time to enjoy the silence and coolness</string>
    <string name="thunderstorm_message">Be careful and avoid open spaces</string>
    <string name="mist_message">Perfect time for quiet reflections</string>

  <string name="weather_today_in_city">The weather today in the city</string>
  <string name="temperature">Temperature</string>
  <string name="condition">Weather condition</string>

  <string name="weather_info">Wather information</string>
  <string name="wind_speed">Wind speed</string>
  <string name="pressure">Pressure</string>
  <string name="precipitation">Precipitation</string>
</resources>