<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.YaWeather.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:theme="@style/Theme.YaWeather.AppWidgetContainer"
    >

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appwidget_text"
        android:padding="2dp"
        android:text="Tashkent"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_widget_description"
        android:padding="2dp"
        android:text="Quite cold"
        android:textSize="16sp"
        />

  </LinearLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="10dp"
      android:orientation="vertical"
      >
    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/appwidget_temperature"
        android:text="2 \u00B0C"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tv_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/app_widget_sunrise"
        android:gravity="center"
        android:text="Sunrise: 06:12"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/tv_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/app_widget_sunset"
        android:gravity="center"
        android:text="Sunset: 18:34"
        android:textSize="16sp"
        />

  </LinearLayout>

</LinearLayout>